--- a/src/main/resources/static/test/vue/router/vue_router.html
+++ b/src/main/resources/static/test/vue/router/vue_router.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh" xmlns:th="http://www.thymeleaf.org">
+<html lang="zh">
 <head>
     <meta charset="UTF-8"/>
     <title>测试</title>
@@ -18,8 +18,8 @@
   <!-- 路由匹配到的组件将渲染在这里 -->
   <router-view></router-view>
 </div>
-<script th:src="@{/webjars/vue/vue.js}"></script>
-<script th:src="@{/webjars/vue-router/dist/vue-router.js}"></script>
+<script src="/vue/Vue.js"></script>
+<script src="/vue/vue-router.js"></script>
 <script type="text/javascript">
 //0. 如果使用模块化机制编程，导入Vue和VueRouter，要调用 Vue.use(VueRouter)
 //1. 定义（路由）组件。
