--- a/src/main/resources/static/websocket/test.html
+++ b/src/main/resources/static/websocket/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
 <!--     <link rel="stylesheet" href="plugins/bootstrap/dist/css/bootstrap.min.css"> -->
 <!--     <link rel="stylesheet" href="plugins/bootstrap/dist/css/bootstrap-theme.min.css"> -->
-<!--     <script src="plugins/jquery/jquery-1.11.2.min.js"></script> -->
+    <script src="/plugins/jquery/jquery-1.11.2.min.js"></script>
 <!--     <script src="plugins/bootstrap/dist/js/bootstrap.min.js"></script> -->
     <style type="text/css">
     #msg {
